--- a/src/widgets/gallery/ui/gallery.module.scss
+++ b/src/widgets/gallery/ui/gallery.module.scss
@@ -27,4 +27,66 @@
         grid-column: 1 / span 12;
         gap: 32px;
     }
+    
+    .cardSkeleton {
+        height: 185px;
+        width: 100%;
+
+        @media only screen and (min-width: 768px) {
+            height: 220px;
+        }
+    
+        @media only screen and (min-width: 1280px) {
+            height: 260px;
+        }
+
+        @media only screen and (min-width: 320px) and (max-width: 767px) {
+            width: 100%;
+        }
+
+        @media only screen and (min-width: 768px) {
+            @for $r from 1 through 3 {
+                @for $c from 1 through 2 {
+                    $index: ($r - 1) * 2 + $c;
+                    $start: 1 + ($c - 1) * 4;
+                    &:nth-child(#{$index}) {
+                        grid-column: $start / span 4; 
+                    }
+                }
+            }
+        }
+    
+        @media screen and (min-width: 1280px) {
+            @for $r from 1 through 2 {
+                @for $c from 1 through 3 {
+                    $index: ($r - 1) * 3 + $c;
+                    $start: 1 + ($c - 1) * 4;
+                    &:nth-child(#{$index}) {
+                        grid-column: $start / span 4;
+                    }
+                }
+            }
+        }
+    }
+
+    .paginationSkeleton {
+        height: 24px;
+    
+
+        @media screen and (min-width: 320px) {
+            margin-top: 12px;
+            width: 100%;
+            margin-bottom: 60px;
+        }
+
+        @media screen and (min-width: 768px) {
+            grid-column: 3 / span 4;
+            margin-top: 16px;
+        }
+
+        @media screen and (min-width: 1280px) {
+            grid-column: 5 / span 4;
+            margin-top: 12px;
+        }
+    }
 }
