--- a/src/app/styles/_normalize.scss
+++ b/src/app/styles/_normalize.scss
@@ -10,7 +10,7 @@
 // Set to true if you want to add support for IE6 and IE7
 // Notice: setting to true might render some elements
 // slightly differently than when set to false
-$legacy_support_for_ie: false !default; // Used also in Compass
+$legacy_support_for_ie: false !default; 
 
 // Set the default font family here so you don't have to override it later
 $normalized_font_family: sans-serif !default;
