--- a/src/shared/ui/select/select.module.scss
+++ b/src/shared/ui/select/select.module.scss
@@ -1,5 +1,3 @@
-@import '../../../../app/styles/mixins/_mixins.scss';
-
 .selectWrapper {
     position: relative;
     width: 100%;
@@ -60,6 +58,17 @@
 
         & li:hover {
             background-color: var(--hover-bg);
+        }
+
+        .notFound {
+            padding: 8px 16px;
+            color: var(--secondary-gray);
+            border: none;
+            background-color: transparent;
+        }
+
+        .notFound:hover {
+          background-color: transparent;
         }
     }
 }
