--- a/src/entities/painting/paintingCard/ui/paintingCard.module.scss
+++ b/src/entities/painting/paintingCard/ui/paintingCard.module.scss
@@ -3,6 +3,32 @@
     overflow: hidden;
     position: relative;
 
+    .fallback {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        color: var(--primary-gray);
+        height: 185px;
+        
+        svg {
+            fill: currentColor;
+            height: 30px;
+            width: 30px;
+        }
+
+        p {
+            margin: 0;
+            color: currentColor;
+            @include caption-small;
+      
+
+            @media only screen and (min-width: 768px) {
+                @include caption-big;
+            }
+        }
+
+    }
 
     @media only screen and (min-width: 320px) and (max-width: 767px) {
         width: 100%;
@@ -27,7 +53,7 @@
             height: 260px;
         }
     }
-    
+
     @media only screen and (min-width: 768px) {
 
         @for $r from 1 through 3 {
